css/style.css
/* ... */
.content:hover .content-overlay-glitter {
  opacity: 0.15;
}

.content .content-overlay-water {
  background-image: url(../img/water.gif);
  background-size: cover;
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  margin: 0;
  padding: 0;
  -webkit-transition: all 0.4s ease-in-out 0s;
  -moz-transition: all 0.4s ease-in-out 0s;
  transition: all 0.4s ease-in-out 0s;
}

.content:hover .content-overlay-water {
  opacity: 0.15;
}

.content-image{
  width: 100%;
  height: auto;
}

.content-details {
  position: absolute;
  text-align: center;
  padding: 0 1rem;
  width: 100%;
  top: 40%;
  left: 50%;
  opacity: 0;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.content:hover .content-details{
  top: 50%;
  left: 50%;
  opacity: 1;
}

/* Wiggle */

.wiggle {
  display: inline-block;
  animation: wiggle 3s infinite;
}

.wiggle:hover {
  animation: none;
}

@keyframes wiggle {
    0% { transform: rotate(0deg); }
   80% { transform: rotate(0deg); }
   85% { transform: rotate(2deg); }
   95% { transform: rotate(-2deg); }
  100% { transform: rotate(0deg); }
}

/* Fade */

.fading {
    opacity: 1;
    animation: fade 10s infinite;
}

@keyframes fade {
  0% { opacity: 70% }
  50% { opacity: 90% }
  100% { opacity: 70% }
}

/* Sections */


/* Title */

.title {
  background: url(../img/stalk/files2.gif) no-repeat center center fixed;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  height: 100vh;
  color: white;
  padding: 1em 2em;
}

/* Press */

/*.press {*/
/*    display: grid;*/
/*    grid-template-columns: 1fr;*/
/*    grid-template-rows: auto;*/
/*    grid-gap: 2rem;*/
/*    background-color: black;*/
/*    color: white;*/
/*}*/

/*.press content {*/
/*  text-align: justify;*/
/*  align-self: center;*/
/*}*/

/*.press a {*/
/*  color: #eedfd8;*/
/*}*/


/* Interviews */

/*.interviews {*/
/*    display: grid;*/
/*    grid-template-columns: 1fr 1.5fr;*/
/*    grid-template-rows: auto;*/
/*    grid-gap: 2rem;*/
/*    background-color: black;*/
/*    color: white;*/
/*}*/

/*.interviews a {*/
/*  color: #dceed8;*/
/*}*/

/*#interview-portrait {*/
/*    grid-row: 1;*/
/*    grid-column: 1;*/
/*    z-index: 1;*/
/*    text-align: center;*/
/*    align-self: center;*/
/*}*/

/*!*#interview-portrait img {*/
/*    max-width: 400px;*/
/*}*!*/

/*#interview-links {*/
/*    grid-row: 1;*/
/*    grid-column: 2;*/
/*    z-index: 1;*/
/*    text-align: left;*/
/*    align-self: center;*/
/*}*/

/*@media only screen and (max-width: 600px) {*/
/*    .interviews {*/
/*        grid-template-columns: 1fr;*/
/*        padding-top: 2rem;*/
/*    }*/

/*    #interview-portrait {*/
/*        grid-row: 1;*/
/*        grid-column: 1;*/
/*        z-index: 1;*/
/*        text-align: center;*/
/*        align-self: center;*/
/*    }*/

/*    #interview-links {*/
/*        grid-row: 2;*/
/*        grid-column: 1;*/
/*        z-index: 1;*/
/*        text-align: center;*/
/*        align-self: center;*/
/*    }*/
/*}*/


/* Bio */

.bio {
    display: grid;
    grid-template-columns: 2fr 3fr;
    grid-template-rows: auto;
    grid-gap: 2rem;
    background-color: black;
    color: white;
    align-items: start;
}

.bio-name {
    grid-row: 1;
    grid-column: 1;
    z-index: 2;
    align-self: start;
    transform: rotate(-20deg);
    max-width: 200px;
}

.bio-image {
    grid-row: 1;
    grid-column: 1;
    z-index: 1;
}

.bio-text {
    grid-row: 1;
    grid-column: 2;
    align-self: center;
}

.album {
    display: grid;
    grid-template-columns: 3fr 2fr;
    grid-template-rows: auto;
    grid-gap: 2rem;
    background-color: black;
    color: white;
}

.album-name {
    grid-row: 1;
    grid-column: 2;
    z-index: 2;
    align-self: start;
    margin-left: -30px;
    transform: rotate(7deg);
    max-width: 200px;
}

.album-image {
    grid-row: 1;
    grid-column: 2;
    z-index: 1;
    max-width: 500px;
}

.album-text {
    grid-row: 1;
    grid-column: 1;
    align-self: center;
}

.single {
    display: grid;
    grid-template-columns: 2fr 3fr;
    grid-template-rows: auto;
    grid-gap: 2rem;
    background-color: black;
    color: white;
}

.single-name {
    grid-row: 1;
    grid-column: 1/span 2;
    z-index: 2;
    align-items: end;
    transform: rotate(-10deg);
    max-width: 200px;
}

.single-image {
    grid-row: 1;
    grid-column: 1;
    z-index: 1;
    max-width: 500px;
}

.single-text {
    grid-row: 1;
    grid-column: 2;
    align-self: center;
}

.quote {
    font-size: 0.75em;
    font-style: italic;
}

.photos {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    grid-gap: 2rem;
    align-items: center;
}

.photo-name {
    grid-row: 1;
    grid-column: 1;
    z-index: 2;
    align-self: center;
    text-align: center;
    transform: rotate(3deg);
    max-width: 175px;
}

.photo-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-gap: 2rem;
}

.photo-grid-1 {
    grid-row: 1;
    grid-column: 1;
    text-align: center;
    align-self: center;
}

.photo-grid-2 {
    grid-row: 1;
    grid-column: 2;
    text-align: center;
    align-self: center;
}

.photo-grid-3 {
    grid-row: 2;
    grid-column: 1;
    text-align: center;
    align-self: center;
}

.photo-grid-4 {
    grid-row: 2;
    grid-column: 2;
    text-align: center;
    align-self: center;
}

.center {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 75%;
}

.link-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-gap: 1rem;
}

.link-column {
    text-align: center;
    align-self: center;
    grid-gap: 1rem;
}

.link-column a {
  color: #9e9aa6;
}
/* ... */

